<resources>
    <string name="app_name">Team Nine</string>
    <string name="welcome">Welcome to the Team 9 rescue app</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="location">Location e.g. Dar es salaam, Tanzania</string>
    <string name="boatName">Boat Name</string>
    <string name="password">Password</string>
    <string name="rpassword">Repeat password</string>
    <string name="cregister">Complete Registration</string>
    <string name="imgboat">Tap image above to take a picture of your boat</string>
    <string name="phone">Phone number</string>
    <string name="vesseltype">Boat Type</string>
    <string name="maxcap">Maximum capacity of boat</string>
    <string name="login">Log in</string>
    <string name="pressemg">Press bell button to call for help</string>
    <string name="torescue">People in danger</string>
    <string name="boatproblem">What problem are you facing?</string>
    <string name="boatissue">Engine failure</string>
    <string name="crewcap">Crew member drowning/overboard</string>
    <string name="damagedboat">Damage to the boat</string>
    <string name="crewnumber">How many members of your crew are in danger?</string>
    <string name="onetwo">One to two</string>
    <string name="twofive">Two to five</string>
    <string name="fiveormore">More than five</string>
    <string name="casualties">Are there any casualties?</string>
    <string name="none">None</string>
    <string name="onefive">One to five</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel emergency</string>
    <string name="trip">Sail out</string>
    <string name="logout">Log out</string>
</resources>
