<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:text="@string/boatproblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <CheckBox
            android:text="@string/boatissue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" />

        <CheckBox
            android:text="@string/crewcap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2" />

        <CheckBox
            android:text="@string/damagedboat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3" />

        <TextView
            android:text="@string/crewnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/textView2" />

        <CheckBox
            android:text="@string/onetwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" />

        <CheckBox
            android:text="@string/twofive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" />

        <CheckBox
            android:text="@string/fiveormore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3" />

        <TextView
            android:text="@string/casualties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/textView3" />

        <CheckBox
            android:text="@string/none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4" />

        <CheckBox
            android:text="@string/onefive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5" />

        <CheckBox
            android:text="@string/fiveormore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton6" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSubmit" />

            <Button
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnCancel" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>